--- a/src/main/resources/templates/fotografia.html
+++ b/src/main/resources/templates/fotografia.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../css/style.css" />
-<title>AboutPage</title>
+<title>FotografiaPage</title>
 </head>
 <body>
 	<div class="topnavbar">
@@ -19,8 +19,10 @@
 	<br/>
 	<br/>
 	
-	<div class="body">
-		<p>ADD INFORMATIONS</p>
-	</div>
+	
+	<div><h3 class="title">Fotografia</h3></div>
+	<div th:text="'nome trovato: '+${fotografia.nome}">nome_foto</div>
+	
+	<p>TODO - IMPLEMENT</p>
 </body>
 </html>
