added logic for images transaction on db

--- a/src/main/resources/templates/fotografo.html
+++ b/src/main/resources/templates/fotografo.html
@@ -3,7 +3,7 @@
 	xmlns="http://www.w3.org/1999/html">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../css/style.css" />
+<link rel="stylesheet" href="/css/style.css" />
 <title>FotografoPage</title>
 </head>
 <body>
