--- a/src/main/resources/templates/funzionarioLogin.html
+++ b/src/main/resources/templates/funzionarioLogin.html
@@ -7,14 +7,20 @@
 </head>
 <body>
 	<h4>Effettua il login</h4>
-	<form th:action="@{/login}" method="POST"
-		th:object="${funzionarioForm}">
-		<label for="username">Username</label> <input type="text"
-			id="username" name="username" autofocus="autofocus" /> <label
-			for="password">Password</label> <input type="password" id="password"
-			name="password" /> <br />
-
-		<button type="submit">Login</button>
+	<form th:action="@{/loginControl}" method="POST"
+		th:object="${funzionario}">
+		<p>
+			<input type="text" th:field="*{email}" /> Email <span
+				th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+		</p>
+		<p>
+			<input type="password" th:field="*{password}" /> Password <span
+				th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+		</p>
+		<p>
+			<input type="submit" value="Accedi"> <span
+				th:text="${credenzialiErrate}"></span>
+		</p>
 	</form>
 </body>
 </html>
