--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,6 +39,7 @@
 	<br/>
 	<br/>
 	
-	<div>Visualizza tutte le foto cliccando <a th:href="@{/gallery}">qui</a>!</div>
+	<div>Visualizza tutte le foto e seleziona quelle che desideri accedendo alla <a th:href="@{/gallery}">gallery</a>  :)</div>
+	<div>(attenzione, la pagina rispondera' molto lentamente)</div>
 </body>
 </html>
