--- a/src/main/resources/templates/fotografoIndex.html
+++ b/src/main/resources/templates/fotografoIndex.html
@@ -6,8 +6,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-<a th:href="@{/addFotografo}">Aggiungi Fotografo</a>
+<a th:href="@{/addFotografo}">Aggiungi fotografo</a>
 <span>oppure</span>
-<h4><a href="fotografo/{id}">elenco fotografi</a></h4>
+<h4><a href="fotografo/{id}">Elenco fotografi</a></h4>
 </body>
 </html>
