added DBPopulation and refactored gallery preparing for cart

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -52,5 +52,11 @@ body {
 	width:30%;
 	height:30%;
 	padding-left: 350px;
-	transform: rotate(-90deg);
+}
+
+.addToCarrello_image {
+}
+
+.carrello_image {
+	float: right;
 }
