--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -7,14 +7,23 @@
 <title>Gallery Fotografie</title>
 </head>
 <body>
-	<div class="title"><h1>Fotografie della Silph Spa</h1></div>
+	<div class="title">
+		<h1>Fotografie della Silph Spa</h1>
+		<a th:href="@{/mostraCarrello}">
+			<img src="/icons/cart.png" class="carrello_image"></a>
+	</div>
+	<div style="padding-left: 350px"><i>seleziona le foto che vorresti utilizzare</i></div>
+	<div style="padding-left: 350px"><i>da gestire ancora la posizione del bottone</i></div>
 	<br/>
 	<br/>
 	
-	<ul>
-		<li th:each="fotoPath : ${files_scaricati}">
-			<img th:src="@{${fotoPath}}" class="gallery_image">
-		</li>
-	</ul>
+	<div th:each="fotoPath : ${files_galleria}">
+		<img th:src="@{${fotoPath}}" class="gallery_image">
+		
+		<form style="position: inherit;" th:action="@{/aggiungiAlCarrello}">
+			<!-- style="display: none;" -->
+			<input style="display: none;" type="text" th:value="${fotoPath}" name="fotoPath">
+			<button type="submit"><img src="/icons/addToCart.png" class="addToCarrello_image"></button></form>
+	</div>
 </body>
 </html>
