--- a/src/main/resources/templates/myErrorPage.html
+++ b/src/main/resources/templates/myErrorPage.html
@@ -9,5 +9,6 @@
 	<h1>something went wrong...</h1>
 	<br/>
 	<div th:text="${erroreIO}">errore_IO</div>
+	<div th:text="${erroreGenerico}">messaggio_errore_generico</div>
 </body>
 </html>
