--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -5,14 +5,11 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/css/style.css" />
 <title>Gallery Fotografie</title>
-<ul>
-	<li><a th:href="@{/shoppingCart}">Carrello</a></li>
-</ul>
 </head>
 <body>
 	<div class="title">
 		<h1>Fotografie della Silph Spa</h1>
-		<a th:href="@{/mostraCarrello}"> <img src="/icons/cart.png"
+		<a th:href="@{/shoppingCart}"> <img src="/icons/cart.png"
 			class="carrello_image"></a>
 	</div>
 	<div style="padding-left: 350px">
@@ -27,7 +24,7 @@
 	<div th:each="fotoPath : ${files_galleria}">
 		<img th:src="@{${fotoPath}}" class="gallery_image">
 
-		<form style="position: inherit;" th:action="@{/aggiungiAlCarrello}">
+		<form style="position: inherit;" th:action="@{shoppingCart/aggiungiAlCarrelloDallaGallery}">
 			<!-- style="display: none;" -->
 			<input style="display: none;" type="text" th:value="${fotoPath}"
 				name="fotoPath">
