--- a/src/main/resources/templates/fotografi.html
+++ b/src/main/resources/templates/fotografi.html
@@ -8,7 +8,7 @@
 			<li th:each="fotografo : ${fotografi}"> 
 				<a
 				th:href="@{'/fotografo/' + ${fotografo.id}}"
-				th:text="${fotografo.nome}">mario rossi</a>
+				th:text="${fotografo.nome}">nome_fotografo</a>
 			</li>
 		</ul>
 	</div>
