--- a/src/main/resources/templates/funzionarioHome.html
+++ b/src/main/resources/templates/funzionarioHome.html
@@ -15,5 +15,8 @@ seleziona un'attività
 <div>
 <span><a th:href="@{/indiceFotografo}">Aggiungi album</a></span>
 </div>
+<div>
+<span><a th:href="@{/addFotografia}">Aggiungi fotografia</a></span>
+</div>
 </body>
 </html>
