--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,14 @@
 <title>HomePage</title>
 </head>
 <body>	
+	<div class="title"><h1>Silph Spa</h1></div>
 	<div class="topnavbar">
-		<h1 class="title"><b>Silph Spa</b></h1>
-		<br>
+		<br/>
 		<a th:href="@{/}">Home</a>
 		<span>	</span>
 		<a th:href="@{/about}">About</a>
 		<a th:href="@{/login}">LoginFunzionario</a>
+		<br/>
 	</div>
 	
 	<br/>
