final implementation for searching logic

--- a/src/main/resources/templates/fotografo.html
+++ b/src/main/resources/templates/fotografo.html
@@ -32,12 +32,12 @@
 		</tr>
 		<tr>
 			<td>
-				<a th:href="@{'/albums/'+*{id}}" th:text="Album">album_fotografo</a>
+				<a th:href="@{'/albumsPerFotografo/'+*{id}}" th:text="Album">album_fotografo</a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<a th:href="@{'/fotografieFotografo/'+*{id}}" th:text="Fotografie">fotografie_fotografo</a>
+				<a th:href="@{'/fotografiePerFotografo/'+*{id}}" th:text="Fotografie">fotografie_fotografo</a>
 			</td>
 		</tr>
 	</table>
