--- a/src/main/resources/templates/fotografie.html
+++ b/src/main/resources/templates/fotografie.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/css/style.css" />
-<title>AlbumPage</title>
+<title>Fotografie Fotografo</title>
 </head>
 <body>
 	<div class="topnavbar">
@@ -20,30 +20,17 @@
 	<br/>
 	
 	
-	<div><h3 class="title">Album</h3></div>
-	<table th:object="${album}">
-		<tr>
-			<td>Nome: </td>
-			<td th:text="*{nome}">nome_album</td>
-		</tr>
-		<tr>
-			<td>Registrazione: </td>
-			<td th:text="${#temporals.format(album.dataRegistrazione, 'dd-MM-yyyy')}">data_album</td>
-		</tr>
-	</table>
-	<div>Fotografie: <i>(puoi direttamente aggiungere al carrello quelle che preferisci)</i></div>
-	<br/>
+	<div><h3 class="title">Fotografie</h3></div>
 	<div th:each="fotoPath : ${fotografie_paths}">
 		<img class="gallery_image" th:src="@{${fotoPath}}">
 
 		<form style="float: left; padding-top: 40px; padding-left: 60px;" 
-		  th:action="@{shoppingCart/aggiungiAlCarrelloDallAlbum}">
+		  th:action="@{shoppingCart/aggiungiAlCarrelloDalleFotografie}">
 			<input style="display: none;" type="text" th:value="${fotoPath}" name="fotoPath">
 			<button type="submit">
 				<img class="addToCarrello_image" src="/icons/addToCart.png" alt="aggiungi immagine">
 			</button>
 		</form>
 	</div>
-
 </body>
 </html>
