aggiunto collegamento alla home dalla gallery

--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -10,6 +10,7 @@
 	<div class="title">
 		<h1>Fotografie della Silph Spa</h1>
 		<a class="carrello_image" th:href="@{/shoppingCart}"><img src="/icons/cart.png" alt="carrello immagine"></a>
+		<a class="home_image" th:href="@{/}"><img src="/icons/home-57.png" alt="home immagine"></a>
 	</div>
 	<div style="padding-left: 300px">
 		<i>seleziona le foto che vorresti utilizzare cliccando sul bottone a lato immagine</i>
