--- a/src/main/resources/templates/funzionarioHome.html
+++ b/src/main/resources/templates/funzionarioHome.html
@@ -7,16 +7,13 @@
 seleziona un'attività
 </div>
 <div>
-<span><a th:href="@{/indiceFotografo}">Aggiungi fotografo</a></span>
+<span><a th:href="@{/addFotografo}">Aggiungi fotografo</a></span>
 </div>
 <div>
 <span><a th:href="@{/addFotografia}">Aggiungi foto</a></span>
 </div>
 <div>
 <span><a th:href="@{/indiceFotografo}">Aggiungi album</a></span>
-</div>
-<div>
-<span><a th:href="@{/addFotografia}">Aggiungi fotografia</a></span>
 </div>
 </body>
 </html>
