--- a/src/main/resources/templates/aboutPage.html
+++ b/src/main/resources/templates/aboutPage.html
@@ -7,12 +7,10 @@
 <title>AboutPage</title>
 </head>
 <body>
+	<div class="title"><h1>Silph Spa</h1></div>
 	<div class="topnavbar">
-		<h1 class="title"><b>Silph Spa</b></h1>
 		<br>
 		<a th:href="@{/}">Home</a>
-		<span>	</span>
-		<a th:href="@{/about}">About</a>
 	</div>
 	
 	<br/>
@@ -20,7 +18,15 @@
 	<br/>
 	
 	<div class="body">
-		<p>ADD INFORMATIONS</p>
+		<p>Questa web application e' stata creata da </p>
+		<ul>
+			<li>
+				<a th:text="Valerio Valente" th:href="https://github.com/valeriova96">link_valerio</a>
+			</li>
+			<li>
+				<a th:text="Gabriele De Stradis" th:href="https://it.linkedin.com/in/gabriele-de-stradis-172173174">link_gabriele</a>
+			</li>
+		</ul>
 	</div>
 </body>
 </html>
