--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -10,26 +10,27 @@
 	<div class="title"><h1>Carrello</h1></div>
 	<div align="center">
 		<form th:action="@{/gallery}">
-			<input type="button" value="Go Back" onClick="history.go(-1);">
+			<input type="button" value="Prosegui navigazione" onClick="history.go(-1);">
 			<span>&emsp;</span>
-			<button type="submit">Go To Gallery</button>
+			<button type="submit">Vai alla Gallery</button>
 		</form>
 	</div>
 	<br />
 
-	<div th:each="fotografia : ${fotografie}">
-		<div>
-			<h1>
-				<a th:text="${fotografia.nome}"
-					th:href="@{'/fotografia/' + ${fotografia.id}}">Title</a>
-			</h1>
-		</div>
-		<div>
-			<a th:href="@{'/shoppingCart/rimuoviFotografia/{id}'(id=${fotografia.id})}" ><button
-					type="button" th:text="Rimuovi">Rimuovi</button>
-			</a>
-		</div>
-		<br/>
+	<div>
+		<ul>
+			<li th:each="fotografia : ${fotografie}" th:object="${fotografia}">
+			
+				<a style="font-size: large;" th:text="*{nome}"
+					th:href="@{'/fotografia/' + *{id}}">Title</a>
+				<br/>
+				<a th:href="@{'/shoppingCart/rimuoviFotografia/{id}'(id=${fotografia.id})}" ><button
+					type="button" th:text="Rimuovi">Rimuovi</button></a>
+					
+				<br/>
+				<br/>
+			</li>
+		</ul>
 	</div>
 
 	<div>
@@ -42,7 +43,5 @@
 		</span>
 		
 	</div>
-
-
 </body>
 </html>
