--- a/src/main/resources/templates/scegliFotografia.html
+++ b/src/main/resources/templates/scegliFotografia.html
@@ -3,23 +3,20 @@
 	xmlns="http://www.w3.org/1999/html">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="/css/style.css" />
 <title>Inserimento Nuova Fotografia</title>
 </head>
 <body>
 	<div class="title"><h4>Scelta fotografia</h4></div>
 	<div><i>Seleziona la foto per salvarla nel db</i></div>
+	<br/>
+	
 	<form th:action="@{'/upload/'+${fotografo}+'/'+${album}}" enctype="multipart/form-data" method="post">
 		Nome foto: <input type="text" th:field="${fotografia.nome}" required>
 		<br/>
 		<input type="file" name="image_file" accept=".jpg, .jpeg" required>
 		<br/>
 		<br/>
-		<!--  <span>
-		<a th:href="@{/addFotografia/addFotografoEsistente}">Seleziona fotografo</a>
-		</span>
-		<br>oppure</br>
-		Nome Fotografo: <input type="text" th:field="*{fotografo.nome}" required>
-		Cognome Fotografo: <input type="text" th:field="*{fotografo.cognome}" required>   -->
 		<button type="submit">Carica</button>
 	</form>
 </body>
